test/library/standard/Sort/errors/sortDomainArray.rect7.good
sortDomainArray.chpl:71: error: '.sorted()' is only supported on associative domains
